<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:text="@string/before"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        />
        <TextView
            android:layout_width="match_parent"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/app_info"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:text="@string/how_to"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />
        <TextView
            android:layout_width="match_parent"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/method"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />
        <TextView
            android:layout_width="match_parent"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:text="@string/goal"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <Button
            android:text="understood"
            android:onClick="go"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button" />


    </LinearLayout>
</ScrollView>